examples/test/testpolicy1474.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1474
  namespace: namespace102
spec:
  podSelector:
    matchLabels:
      key16: value19
      key18: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value4
          key6: value25
      podSelector:
        matchLabels:
          key6: value0
